# Playground

./: LICENSE  README.md
ARCHIVE/OpenTools/: LICENSE  README.md  settings.gradle
ARCHIVE/OpenTools/app/: build.gradle
ARCHIVE/OpenTools/app/src/androidTest/java/com/prescottlabs/opentools/: ExampleInstrumentedTest.kt
ARCHIVE/OpenTools/app/src/main/: AndroidManifest.xml
ARCHIVE/OpenTools/app/src/main/java/com/prescottlabs/opentools/: CameraActivity.kt  MainActivity.kt  TipperActivity.kt
ARCHIVE/OpenTools/app/src/main/res/drawable-anydpi-v26/: ic_launcher_background.xml  ic_launcher_foreground.xml
ARCHIVE/OpenTools/app/src/main/res/layout/: activity_main.xml  activity_tipper.xml
ARCHIVE/OpenTools/app/src/main/res/navigation/: navi_graph.xml
ARCHIVE/OpenTools/app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
ARCHIVE/OpenTools/app/src/main/res/values-night/: themes.xml
ARCHIVE/OpenTools/gradle/wrapper/: gradle-wrapper.properties
Performance/: README.md
Performance/gRPCvREST/: README.md
Performance/gRPCvREST/client/: index.html  index.js  package-lock.json  package.json
Performance/gRPCvREST/client/service/: Cargo.toml  build.rs
Performance/gRPCvREST/client/service/src/: imagestorage.rs  lib.rs
Performance/gRPCvREST/proto/: imagestorage.proto
Performance/gRPCvREST/service/: Cargo.toml  build.rs
Performance/gRPCvREST/service/src/: imagestorage.rs  main.rs
Performance/gRPCvREST/test_service/: Cargo.toml  build.rs
Performance/gRPCvREST/test_service/src/: imagestorage.rs  main.rs
(+2 files in other folders)
